# IMUCovarianceMatrixROS2

./: CMakeLists.txt  README.md  package.xml  txt_to_excel.ipynb
result/: all_covariance_matrices.xlsx  covatiance_matrix_-x1.txt  covatiance_matrix_-x13.txt  covatiance_matrix_-x2.txt  covatiance_matrix_-x3.txt  covatiance_matrix_-x4.txt  covatiance_matrix_-x5.txt  covatiance_matrix_-x6.txt  covatiance_matrix_-x7.txt  covatiance_matrix_-y1.txt  covatiance_matrix_-y13.txt  covatiance_matrix_-y15.txt  covatiance_matrix_-y16.txt  covatiance_matrix_-y17.txt  covatiance_matrix_-y2.txt  covatiance_matrix_-y3.txt  covatiance_matrix_-y4.txt  covatiance_matrix_-y5.txt  covatiance_matrix_-y6.txt  covatiance_matrix_-y7.txt  covatiance_matrix_-z1.txt  covatiance_matrix_-z2.txt  covatiance_matrix_-z3.txt  covatiance_matrix_-z4.txt  covatiance_matrix_-z5.txt  covatiance_matrix_-z6.txt  covatiance_matrix_-z7.txt  new_cov_mat-x1.txt  new_cov_mat-x2.txt  new_cov_mat-x3.txt  new_cov_mat-x4.txt  new_cov_mat-x5.txt  new_cov_mat-x6.txt  new_cov_mat-x7.txt  new_cov_mat-x8.txt  new_cov_mat-x9.txt  new_cov_mat-y1.txt  new_cov_mat-y2.txt  new_cov_mat-y3.txt  new_cov_mat-y4.txt  (+16 more)
src/: imu_covariance_node.cpp
